[package]
name = "redis-tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.2"
clap = "2.33.3"
tui = {version="0.16.0", features=["crossterm"], default-features=false}
crossterm = "0.20"