[package]
name = "redis-tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossterm = "0.20"
rand = "0.8.4"
redis = "0.21.2"
tui = {version="0.16.0", features=["crossterm"], default-features=false}